- 30/11/2023
01. scan_int.c, scan_ulong.c: fix conversion when string has non-numeric
    characters
- 22/12/2023
02. str_spn.c: added str_spn() function
- 31/12/2023
03. moved repository to indimail org
- 22/01/2024
04. added buffer library interface
05. subsdio.h, subfdins.c, subfdouts.c, subfderr.c: use SUBSTDIO_SMALL
    definition from substdio.h

* Fri Sep 08 2023 12:40:38 +0530 Manvendra Bhangui <libqmail@indimail.org> 1.2-1.1%{?dist}
Release 1.2-1.1 Start 24/04/2023 End 08/09/2023
- 24/04/2023
01. error.c, error.h: fixed error code numbering
- 19/05/2023
02. libqmail.spec.in: updated SPEC post fedora review
- 10/06/2023
03. tcpopen.c: added missing return for unix domain socket
- 28/06/2023
04. added tcpremoteip() function
- 16/07/2023
05. base/mkpasswd.c: allow storage space for salt to be dynamically allocated
06. base/makesalt.c: added YESCRYPT. use crypt_gensalt if available to
    generate salt for yescrypt
07. configure.ac, base/hashmethods.h.in: added YESCRYPT_HASH
- 06/07/2023
08. renamed ssl directory to tls
09. base/strerr.h: protect STRERR, STRERR_SYS macro parameters
10. tls/tls.c, tls/tls.h: store ssl, system error for tlsread, tlswrite in
    strerr_tls structure
- 22/08/2023
11. tls/tls.c: added get_tls_method function
12. tls/tls.c: use SSL_CTX_set_ciphersuites() for TLSv1_3 and above instead of
    SSL_CTX_set_cipher_list()
13. tls/tls.c: pass pointer to tls method in set_tls_method()
14. tls/tls.c: set default cipher PROFILE=SYSTEM only for TLSv1_2 and below
15. tls/tls.h: added get_tls_method function
16. tls/tls.h: added pointer to tls method variable as a new argument to
    tls_set_method()
17. tls/tls.c: adjusted OPENSSL_VERSION_NUMBER for TLSv1_3
18. tls/tls.c: corrected bug invalid cipher caused SIGSEGV
19. tls/tls.c: tlsclientmethod, tlsservermethod can have min:max as version
20. tls/tls.c: set errno = EPROTO when protocol is unavailable
21. tls/tls.c: fixed few warnings without ssl errors