@@ -1,1 +1,0 @@
-../indimail-mta/indimail-mta-x/doc/CREDITS.md
