@@ -1,5 +1,8 @@
 /*
  * $Log: timeoutread.c,v $
+ * Revision 1.6  2024-01-23 18:36:27+05:30  Cprogrammer
+ * added timeoutread() using poll() instead of select()
+ *
  * Revision 1.5  2021-03-03 23:56:25+05:30  Cprogrammer
  * fix data types
  *
@@ -16,8 +19,37 @@
 #include <unistd.h>
 #include <sys/types.h>
 #include "timeoutread.h"
-#include "select.h"
+#include "iopause.h"
 #include "error.h"
+
+#ifdef IOPAUSE_POLL /*- taken from Erwin Hofman fehQlibs */
+ssize_t
+timeoutread(long t, int fd, char *buf, size_t len)
+{
+	struct taia     now;
+	struct taia     deadline;
+	iopause_fd      x;
+
+	taia_now(&now);
+	taia_uint(&deadline, t);
+	taia_add(&deadline, &now, &deadline);
+
+	x.fd = fd;
+	x.events = IOPAUSE_READ;
+	for (;;) {
+		taia_now(&now);
+		iopause(&x, 1, &deadline, &now);
+		if (x.revents)
+			break;
+		if (taia_less(&deadline, &now)) {
+			errno = ETIMEDOUT;
+			return -1;
+		}
+	}
+	return read(fd, buf, len);
+}
+#else
+#include "select.h"
 
 ssize_t
 timeoutread(long t, int fd, char *buf, size_t len)
@@ -39,11 +71,12 @@ timeoutread(long t, int fd, char *buf, size_t len)
 	errno = error_timeout;
 	return -1;
 }
+#endif
 
 void
 getversion_timeoutread_c()
 {
-	static char    *x = "$Id: timeoutread.c,v 1.5 2021-03-03 23:56:25+05:30 Cprogrammer Exp mbhangui $";
+	static char    *x = "$Id: timeoutread.c,v 1.6 2024-01-23 18:36:27+05:30 Cprogrammer Exp mbhangui $";
 
 	x++;
 }
